<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.astro.war.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/armyTwoImage"
            android:layout_width="266dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="161dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.248"
            app:srcCompat="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/playerTwoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/armyTwoImage"
            android:layout_marginTop="29dp"
            android:text="@string/playerTwoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/message" />

        <TextView
            android:id="@+id/armyTwoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/armyTwoImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="29dp"
            android:text="@string/armyOneText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/armyOneImage"
            android:layout_width="266dp"
            android:layout_height="80dp"
            android:layout_above="@+id/playerOneButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="93dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:srcCompat="@color/colorAccent" />

        <Button
            android:id="@+id/playerOneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/armyOneImage"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp"
            android:text="@string/playerOneButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.984" />

        <TextView
            android:id="@+id/armyOneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/armyOneImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/armyTwoText" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
